@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<video-layouts>
+  <layout id="small">small</layout>
+  <layout id="with-links">with info</layout>
+  <layout id="large">large</layout>
+  <layout id="double">double</layout>
+</video-layouts>
