@@ -27,6 +27,7 @@ product_config = """
     book-recension-categories file://%s
     genre-url file://%s
     image-layout-source file://%s
+    video-layout-source file://%s
 </product-config>
 """ % (
     pkg_resources.resource_filename(
@@ -34,7 +35,9 @@ product_config = """
     pkg_resources.resource_filename(
     __name__, '/tests/article-genres.xml'),
     pkg_resources.resource_filename(
-    __name__, '/edit/tests/image-layouts.xml')
+    __name__, '/edit/tests/image-layouts.xml'),
+    pkg_resources.resource_filename(
+    __name__, '/edit/tests/video-layouts.xml'),
 )
 
 
